// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > renders correctly with custom background color 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HW
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with custom text color 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HW
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <img
        alt=""
        height="100%"
        src="/src/components/Avatar/__stories__/support.svg"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with lock 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #e9eaeb;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.emotion-4 {
  vertical-align: middle;
  fill: #727683;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-4 .fillStroke {
  stroke: #727683;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <svg
          class="emotion-4 emotion-5"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 1a4.5 4.5 0 0 0-4.5 4.5V9H5a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-6a2 2 0 0 0-2-2h-.5V5.5A4.5 4.5 0 0 0 10 1m3 8V5.5a3 3 0 1 0-6 0V9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with sentence 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HW
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with size 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 48px;
  width: 48px;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="48"
    >
      <img
        alt=""
        height="100%"
        src="/src/components/Avatar/__stories__/support.svg"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with small text 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HW
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with text 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HE
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 32px;
  width: 32px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: red;
  border-radius: 100%;
  color: white;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="32"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HW
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders correctly with text size 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      size="50"
    >
      <span
        class="emotion-2 emotion-3"
      >
        HE
      </span>
    </div>
  </div>
</DocumentFragment>
`;
